--- a/src/app/pages/offer-page/offer-page.component.html
+++ b/src/app/pages/offer-page/offer-page.component.html
@@ -15,7 +15,7 @@
 
       <div *ngIf="offer.capital" class="item">
         <span>{{getCapitalLabel()}}</span>
-        <span>{{offer.capital}}</span>
+        <span>{{getCapitalValueAsString()}}</span>
       </div>
 
       <div class="item">
