--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -34,6 +34,8 @@
         <p class="desc">{{offerTypeData.desc}}</p>
       </div>
     </div>
+
+    <button class="button-primary button-primary-large" [routerLink]="'/new-offer'">Создать оффер</button>
   </section>
 
   <section class="about-platform-block">
