--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -51,7 +51,7 @@
   <section id="user-offers">
     <div class="title-block">
       <h2>Мои офферы</h2>
-      <button class="button-primary button-circle button-primary-large" [routerLink]="['/new-offer']">+</button>
+      <button class="button-primary" [routerLink]="'/new-offer'">Создать оффер</button>
     </div>
     <div class="offers-list" *ngIf="hasOffers">
       <app-offer-card *ngFor="let offer of userOffers$ | async" [offer]="offer" [editable]="true"></app-offer-card>
