--- a/src/app/template-blocks/header/header.component.html
+++ b/src/app/template-blocks/header/header.component.html
@@ -1,19 +1,46 @@
 <header id="header">
-  <nav>
+  <!-- Desktop menu -->
+  <nav class="desktop-menu">
     <div class="logo-block">
-      <img src="/assets/img/logo_header.svg" alt="BizMate логотип" [routerLink]="['/']" />
+      <img src="/assets/img/logo_header.svg" alt="BizMate логотип" [routerLink]="'/'"/>
     </div>
 
     <div class="nav-buttons">
-      <a [routerLink]="['/']">Главная</a>
-      <a *ngIf="loggedIn" [routerLink]="['/profile']">Мой кабинет</a>
-      <a [routerLink]="['/offers-page']">Офферы</a>
+      <a [routerLink]="'/'">Главная</a>
+      <a *ngIf="loggedIn" [routerLink]="'/profile'">Мой кабинет</a>
+      <a [routerLink]="'/offers-page'">Офферы</a>
     </div>
 
     <div class="login-button">
       <button class="button-primary login-button" (click)="onAuthButtonClick()">{{loggedIn ? 'Выйти' : 'Войти'}}
-        <img *ngIf="!loggedIn" src="/assets/img/login_thumb.svg" alt="Аутентификация" />
+        <img *ngIf="!loggedIn" src="/assets/img/login_thumb.svg" alt="Аутентификация"/>
       </button>
+    </div>
+  </nav>
+
+  <!-- Mobile menu -->
+  <nav class="mobile-menu">
+    <img src="/assets/img/logo_header.svg" alt="BizMate логотип" [routerLink]="'/'"/>
+
+    <div class="mobile-menu-button">
+      <img src="/assets/img/hamburger_menu.svg" alt="Меню" (click)="isMobileMenuOpened = !isMobileMenuOpened"/>
+    </div>
+
+    <div *ngIf="isMobileMenuOpened" class="mobile-menu-wrapper" (click)="isMobileMenuOpened = false" (scroll)="$event.stopImmediatePropagation()">
+      <div class="mobile-menu-container" (click)="$event.stopImmediatePropagation()">
+        <div class="user-info">
+          <span *ngIf="loggedIn">{{userName}}</span>
+          <button class="button-primary login-button" (click)="onAuthButtonClick()">{{loggedIn ? 'Выйти' : 'Войти'}}
+            <img *ngIf="!loggedIn" src="/assets/img/login_thumb.svg" alt="Аутентификация"/>
+          </button>
+        </div>
+        <div class="mobile-menu-nav">
+          <a [routerLink]="'/'" (click)="isMobileMenuOpened = false">Главная</a>
+          <a *ngIf="loggedIn" [routerLink]="'/profile'" (click)="isMobileMenuOpened = false">Мой кабинет</a>
+          <a [routerLink]="'/offers-page'" (click)="isMobileMenuOpened = false">Офферы</a>
+          <a [routerLink]="'/feedback'" (click)="isMobileMenuOpened = false">Помощь</a>
+        </div>
+      </div>
     </div>
   </nav>
 </header>
