--- a/src/styles.scss
+++ b/src/styles.scss
@@ -364,7 +364,7 @@ mat-checkbox {
     background-position: top center;
   }
 
-  app-offer-card {
+  app-offer-card, app-footer {
     z-index: 0;
   }
 }
