--- a/src/app/template-blocks/header/header.component.scss
+++ b/src/app/template-blocks/header/header.component.scss
@@ -92,7 +92,8 @@ header {
         height: 100vh;
         top: 0;
         left: 0;
-        background-color: rgba(255,255,255,.4)
+        background-color: rgba(255,255,255,.4);
+        transition: all .2s linear;
       }
 
       .mobile-menu-container {
