img buttons blue bounds removed & changeDetectionStrategy removed from some components

--- a/src/app/pages/profile-page/profile-page.component.scss
+++ b/src/app/pages/profile-page/profile-page.component.scss
@@ -28,6 +28,7 @@ h2 {
       width: 20px;
       height: 20px;
       cursor: pointer;
+      -webkit-tap-highlight-color: transparent;
     }
 
   }
