--- a/src/app/template-blocks/footer/footer.component.scss
+++ b/src/app/template-blocks/footer/footer.component.scss
@@ -13,6 +13,7 @@ footer {
       height: 19px;
       transform: rotateX(180deg);
       cursor: pointer;
+      -webkit-tap-highlight-color: transparent;
     }
   }
 
