--- a/src/app/template-blocks/offer-card/offer-card.component.scss
+++ b/src/app/template-blocks/offer-card/offer-card.component.scss
@@ -99,6 +99,7 @@
       .edit-btn {
         width: 17px;
         cursor: pointer;
+        -webkit-tap-highlight-color: transparent;
       }
     }
 
