--- a/src/styles.scss
+++ b/src/styles.scss
@@ -93,6 +93,10 @@ textarea.mat-input-element{
   background-color: #f44336 !important;
 }
 
+label.mat-form-field-label > span {
+  color: #868686 !important;
+}
+
 .button-primary {
   padding: 10px 20px;
   color: #F8FAFF;
