--- a/src/app/pages/offers-page/offers-page.component.html
+++ b/src/app/pages/offers-page/offers-page.component.html
@@ -1,9 +1,9 @@
 <main>
 
   <div class="highlight-box search-form-panel">
-    <div>
+    <div (click)="isSearchFormVisible = !isSearchFormVisible">
       <h3>Поиск офферов</h3>
-      <button class="button-primary button-circle" (click)="isSearchFormVisible = !isSearchFormVisible">
+      <button class="button-primary button-circle">
         <img src="/assets/img/bold_arrow.svg" alt="Скрыть/Показать меню"
              [class.transform-arrow]="isSearchFormVisible"/>
       </button>
