sign-up & login form red links & filteredOffers update after response

--- a/src/app/dialogs/sign-up/sign-up.component.html
+++ b/src/app/dialogs/sign-up/sign-up.component.html
@@ -29,6 +29,6 @@
 </div>
 
 <div mat-dialog-actions class="full-width-action-buttons">
-  <a class="non-border-link-button" (click)="logIn()">Уже есть профиль? Войти</a>
+  <a class="non-border-link-button has-account-link" (click)="logIn()">Уже есть профиль? Войти</a>
   <button class="button-primary" (click)="signUp()" [disabled]="!acceptRules">Создать профиль</button>
 </div>
