--- a/src/app/pages/offer-page/offer-page.component.scss
+++ b/src/app/pages/offer-page/offer-page.component.scss
@@ -36,7 +36,8 @@ $main-theme-color: #2E7990;
       white-space: nowrap;
     }
 
-    & > span:nth-of-type(2) {
+    & > span:nth-of-type(2),
+    .business-areas-block > *{
       font-family: 'Raleway-SemiBold';
       text-align: right;
     }
@@ -45,7 +46,7 @@ $main-theme-color: #2E7990;
       margin-bottom: 1.5em;
     }
 
-    & > span.clickable {
+    .clickable {
       cursor: pointer;
       text-decoration: #2E7990 underline;
 
@@ -53,6 +54,11 @@ $main-theme-color: #2E7990;
         color: #2EA6CC !important;
         text-decoration: #2EA6CC underline;
       }
+    }
+
+    .business-areas-block {
+      text-align: right;
+      margin-left: 1em;
     }
   }
 
