--- a/src/app/template-blocks/offer-card/offer-card.component.html
+++ b/src/app/template-blocks/offer-card/offer-card.component.html
@@ -10,9 +10,9 @@
         <span>{{offer.displayName}}</span>
       </div>
 
-      <div class="date">
+      <!--<div class="date">
         <span>{{getOfferDate(offer)}}</span>
-      </div>
+      </div>-->
     </div>
 
     <div class="offer-card-desc">
