--- a/src/app/pages/offer-page/offer-page.component.scss
+++ b/src/app/pages/offer-page/offer-page.component.scss
@@ -129,15 +129,27 @@ $main-theme-color: #2E7990;
       justify-content: space-between;
       align-items: center;
 
-      & > span:nth-of-type(1) {
-        font-weight: bold;
+      & > div {
+        display: flex;
+        flex-direction: column;
+
+        & > span:nth-of-type(1) {
+          font-weight: bold;
+        }
+
+        & > span:nth-of-type(2) {
+          font-size: 12px;
+          opacity: .8;
+          margin-top: .5em;
+        }
       }
 
-      & > span:nth-of-type(2) {
+      & > span {
         font-size: 12px;
         color: rgba(46, 121, 144, 0.6);
         font-family: "Raleway-Light";
         flex-wrap: nowrap;
+        align-self: flex-start;
       }
     }
 
