some lint error reverted & card avatar onerror handler

--- a/src/app/template-blocks/offer-card/offer-card.component.html
+++ b/src/app/template-blocks/offer-card/offer-card.component.html
@@ -2,7 +2,7 @@
   <div>
     <div class="offer-card-header">
       <div class="avatar-container">
-        <img [src]="offer.photoURL" alt="Аватар"/>
+        <img onerror="this.style.display='none'" [src]="offer.photoURL || ''" alt="Аватар"/>
       </div>
 
       <div class="title-and-author">
