--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-overlay></app-overlay>
 <app-notification-bar></app-notification-bar>
 <app-header></app-header>
-<router-outlet></router-outlet>
+<router-outlet (activate)="onActivate()"></router-outlet>
 <app-footer></app-footer>
