dialog window scroll issue 'fix'

--- a/src/app/dialogs/login/login.component.html
+++ b/src/app/dialogs/login/login.component.html
@@ -24,6 +24,6 @@
 
 <div mat-dialog-actions class="full-width-action-buttons">
   <a class="non-border-link-button" [mat-dialog-close] (click)="forgotPassword()">Забыл пароль</a>
-  <a class="non-border-link-button sign-up-link" [mat-dialog-close] (click)="signUp()">Еще нет профиля? Создать</a>
+  <a class="non-border-link-button sign-up-link" [mat-dialog-close] (click)="signUp()">Еще нет профиля?&nbsp;Создать</a>
   <button class="button-primary" (click)="logIn()">Войти</button>
 </div>
