offer card skeleton create (home-page & profile-page)

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -17,7 +17,11 @@
     </div>
 
     <div class="offers-list">
-        <app-offer-card *ngFor="let offer of latestOffers$ | async" [offer]="offer" [editable]="false"></app-offer-card>
+      <ng-container *ngIf="!latestOffers$">
+        <app-offer-card-skeleton></app-offer-card-skeleton>
+        <app-offer-card-skeleton></app-offer-card-skeleton>
+      </ng-container>
+      <app-offer-card *ngFor="let offer of latestOffers$ | async" [offer]="offer" [editable]="false"></app-offer-card>
     </div>
 
     <a class="more-offers link-underline" [routerLink]="['/offers-page']">Больше офферов</a>
