--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,7 +68,7 @@ main {
   flex: 1;
 }
 
-app-header, app-footer, app-offer-card {
+app-header, app-footer, app-offer-card, app-offer-card-skeleton {
   z-index: 1;
 }
 
