--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -19,7 +19,7 @@
         </mat-form-field>
       </div>
 
-      <img class="edit-field" src="/assets/img/edit.svg" alt="Изменить поле"
+      <img class="edit-field" src="/assets/img/icons/edit.svg" alt="Изменить поле"
            (click)="switchEditableField('displayName')"
            [style.opacity]="editableFields.displayName ? 1 : 0.7"/>
     </div>
