--- a/src/app/template-blocks/offer-card/offer-card.component.html
+++ b/src/app/template-blocks/offer-card/offer-card.component.html
@@ -22,8 +22,8 @@
   <div class="offer-card-footer">
     <a class="link-underline" [routerLink]="'/offer/'+offer.offerId">Подробнее</a>
     <div *ngIf="editable">
-      <img class="edit-btn" src="/assets/img/edit.svg" title="Редактировать" (click)="editOffer()"/>
-      <img class="edit-btn" src="/assets/img/delete.svg" title="Удалить" (click)="onDeleteOfferButtonClick()"/>
+      <img class="edit-btn" src="/assets/img/icons/edit.svg" title="Редактировать" (click)="editOffer()"/>
+      <img class="edit-btn" src="/assets/img/icons/delete.svg" title="Удалить" (click)="onDeleteOfferButtonClick()"/>
     </div>
   </div>
 
