--- a/src/app/dialogs/login/login.component.html
+++ b/src/app/dialogs/login/login.component.html
@@ -3,7 +3,7 @@
 <p class="error-message" *ngIf="errorMessage">{{errorMessage}}</p>
 
 <a class="non-border-link-button google-login" (click)="loginGoogle()">Вход через&nbsp;&nbsp;
-  <img src="/assets/img/google_logo.svg" alt="Google"></a>
+  <img src="/assets/img/socials/google_logo.svg" alt="Google"></a>
 
 <div mat-dialog-content [formGroup]="loginFormGroup">
   <mat-form-field appearance="legacy">
@@ -17,7 +17,7 @@
     <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password" (keypress)="onKeyPress($event)">
     <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Скрыть пароль'"
             [attr.aria-pressed]="hidePassword">
-      <img src="/assets/img/visibility_eye.svg" [style.opacity]="hidePassword ? .3 : 1" />
+      <img src="/assets/img/icons/visibility_eye.svg" [style.opacity]="hidePassword ? .3 : 1" />
     </button>
   </mat-form-field>
 </div>
