--- a/src/app/pages/offer-form/offer-form.component.html
+++ b/src/app/pages/offer-form/offer-form.component.html
@@ -83,7 +83,7 @@
       <div class="images-container full-width-field">
         <div *ngFor="let img of offerImages" class="image-block">
           <img [src]="img" alt="Изображение" (click)="openImage(img)"/>
-          <img src="/assets/img/delete.svg" title="Удалить" alt="Удалить" (click)="deleteImage(img)"/>
+          <img src="/assets/img/icons/delete.svg" title="Удалить" alt="Удалить" (click)="deleteImage(img)"/>
         </div>
         <div *ngIf="offerImages.length === 0" class="image-block text-thumb" (click)="_fileInput.click()">
           <span>Загрузить изображение</span>
@@ -105,15 +105,15 @@
       <div *ngIf="isPhoneValid()" class="prefered-contact-methods">
         <span>Предпочетаемые способы свзяи:</span>
         <div>
-          <img src="/assets/img/email.svg" title="Электронная пота" alt="Электронная пота"
+          <img src="/assets/img/icons/email.svg" title="Электронная пота" alt="Электронная пота"
                (click)="contactMethods.email = !contactMethods.email" [style.opacity]="contactMethods.email ? 1 : .3"/>
-          <img src="/assets/img/phone.svg" title="Телефонный звонок" alt="Телефонный звонок"
+          <img src="/assets/img/icons/phone.svg" title="Телефонный звонок" alt="Телефонный звонок"
                (click)="contactMethods.phone = !contactMethods.phone" [style.opacity]="contactMethods.phone ? 1 : .3"/>
-          <img src="/assets/img/whatsapp.svg" title="WhatsApp" alt="WhatsApp"
+          <img src="/assets/img/socials/whatsapp.svg" title="WhatsApp" alt="WhatsApp"
                (click)="contactMethods.whatsapp = !contactMethods.whatsapp" [style.opacity]="contactMethods.whatsapp ? 1 : .3"/>
-          <img src="/assets/img/telegram.svg" title="Telegram" alt="Telegram"
+          <img src="/assets/img/socials/telegram.svg" title="Telegram" alt="Telegram"
                (click)="contactMethods.telegram = !contactMethods.telegram" [style.opacity]="contactMethods.telegram ? 1 : .3"/>
-          <img src="/assets/img/viber.svg" title="Viber" alt="Viber"
+          <img src="/assets/img/socials/viber.svg" title="Viber" alt="Viber"
                (click)="contactMethods.viber = !contactMethods.viber" [style.opacity]="contactMethods.viber ? 1 : .3"/>
         </div>
       </div>
