--- a/src/app/template-blocks/footer/footer.component.html
+++ b/src/app/template-blocks/footer/footer.component.html
@@ -1,12 +1,12 @@
 <footer>
 
   <div class="scroll-up-arrow">
-    <a (click)="scrollToHeader()"><img src="/assets/img/bold_arrow.svg" alt="Вверх"/></a>
+    <a (click)="scrollToHeader()"><img src="/assets/img/icons/bold_arrow.svg" alt="Вверх"/></a>
   </div>
 
   <div class="footer-container">
     <div class="footer_logo_and_copyright">
-      <img src="/assets/img/logo_footer.svg" alt="Логотип подвала" />
+      <img src="/assets/img/biz_mate/logo_footer.svg" alt="Логотип подвала" />
       <p>BizMate &copy; 2020</p>
     </div>
 
@@ -17,8 +17,8 @@
     </div>
 
     <div class="email_and_offer_button">
-      <p (click)="sendEmailYmGoal()"><a href="mailto:info@biz-mate.ru"><img src="/assets/img/email_footer.svg" alt="Почта">info@biz-mate.ru</a></p>
-      <p (click)="sendVkGroupYmGoal()"><a href="https://vk.com/bizmate" target="_blank"><img src="/assets/img/vk_logo.svg" alt="Вконтакте">vk.com/bizmate</a></p>
+      <p (click)="sendEmailYmGoal()"><a href="mailto:info@biz-mate.ru"><img src="/assets/img/icons/email_footer.svg" alt="Почта">info@biz-mate.ru</a></p>
+      <p (click)="sendVkGroupYmGoal()"><a href="https://vk.com/bizmate" target="_blank"><img src="/assets/img/socials/vk_logo.svg" alt="Вконтакте">vk.com/bizmate</a></p>
       <button class="button-primary button-transparent" [routerLink]="['/new-offer']">Создать оффер</button>
     </div>
   </div>
