mobile menu button made as fixed

--- a/src/app/template-blocks/header/header.component.html
+++ b/src/app/template-blocks/header/header.component.html
@@ -22,7 +22,7 @@
   <nav class="mobile-menu">
     <img src="/assets/img/biz_mate/logo_header.svg" alt="BizMate логотип" [routerLink]="'/'"/>
 
-    <div class="mobile-menu-button">
+    <div class="mobile-menu-button button-primary button-circle">
       <img src="/assets/img/icons/hamburger_menu.svg" alt="Меню" (click)="showMobileMenu()"/>
     </div>
 
