--- a/src/app/template-blocks/header/header.component.scss
+++ b/src/app/template-blocks/header/header.component.scss
@@ -76,11 +76,16 @@ header {
       }
 
       .mobile-menu-button {
-        display: initial;
+        position: fixed;
+        right: 5%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         -webkit-tap-highlight-color: transparent;
 
         & > img {
-          width: 24px;
+          width: 20px;
+          height: 20px;
           cursor: pointer;
         }
       }
