--- a/src/app/template-blocks/offer-card/offer-card.component.scss
+++ b/src/app/template-blocks/offer-card/offer-card.component.scss
@@ -20,6 +20,10 @@
       top: -35px;
       left: 20px;
       flex-shrink: 0;
+
+      & > img:-moz-loading {
+        visibility: hidden;
+      }
     }
 
     .title-and-author{
