home page text edited

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -28,9 +28,11 @@
   </section>
 
   <section class="offer-types-section">
-    <h2>Для кого полезен сервис BizMate?</h2>
+    <h2>Как работать с сервисом BizMate</h2>
 
-    <p class="offer-types-desc">Все офферы в нашем сервисе разбиты на 5 типов, четко разграниченных между собой. При создании оффера выберите подходящий тип, чтобы Ваше предложение было максимально релевантным.</p>
+    <p class="offer-types-desc">Все офферы в нашем сервисе разбиты на 5 типов, четко разграниченных между собой.</p>
+    <p class="offer-types-desc">При создании оффера выберите подходящий тип, чтобы Ваше предложение было максимально релевантным. Также укажите 1-2 сферы деятельности Вашего предприятия и обозначте населенный пункт, в котором происходит основная часть Вашей деятельности.</p>
+    <p class="offer-types-desc">Если Вы находитесь в поисках потенциально интересного предложения, то используйте фильтры по сферам бизнеса, типам офферов и населенным пунктам, чтобы работать с наиболее подходящими объявлениями.</p>
 
     <div class="offer-types-list">
       <div *ngFor="let offerTypeData of offerTypesBlockData">
