--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -105,7 +105,7 @@
 
   .offer-types-desc {
     text-align: center;
-    margin: 2em auto 3em;
+    margin: 2em auto 1em;
   }
 
   .offer-types-list {
@@ -113,6 +113,7 @@
     -webkit-box-shadow: 0 0 10px #00303F;
     box-shadow: 0 0 10px #00303F;
     border-radius: 5px;
+    margin-top: 3em;
 
     & > div {
       width: calc(100% - 30px);
